--- a/main.css
+++ b/main.css
@@ -530,7 +530,7 @@ body{
 
 
 
-#share{
+#shareold{
 
 	position:fixed;
 
@@ -616,4 +616,51 @@ body{
 
 	background:rgba(0,0,0,0.75);
 
+}
+
+
+
+
+
+
+
+
+
+
+
+
+#share{
+
+	position:fixed;
+
+	display:none;
+
+	top:10px;
+	left:317px;
+
+	width:300px;
+	height:300px;
+
+	background:white;
+	color:black;
+
+	border:1px solid #EEE;
+	border-radius:2px;
+
+	padding:6px;
+
+	z-index:1500;
+
+	font-family:sans-serif;
+	font-weight:lighter;
+
+}
+
+#share_back{
+	color:blue;
+	float:left;
+}
+
+#share_share{
+	float:right;
 }
