--- a/main.css
+++ b/main.css
@@ -530,75 +530,7 @@ body{
 
 
 
-#shareold{
 
-	position:fixed;
-
-	display:none;
-
-	width:calc(100% - 355px);
-	height:calc(100% - 355px);
-	width:660px;
-	height:460px;
-
-	top:77px;
-	left:calc(50% - 350px);
-
-	border-radius:20px;
-
-	background:white;
-
-	z-index:1500;
-
-}
-
-#share_title{
-
-	padding:20px;
-
-}
-
-#share h1{
-
-	display:block;
-
-	font-family:sans-serif;
-	font-size:24px;
-	font-weight:lighter;
-
-	float:left;
-
-}
-
-#share h2{
-
-	display:block;
-
-	font-family:sans-serif;
-	font-size:18px;
-	color:#0000FF;
-	font-weight:lighter;
-
-	float:right;
-
-}
-
-#share_content{
-
-	width:calc(100% - 40px);
-	height:calc(100% - 40px);
-
-	padding:20px;
-
-	margin-top:20px;
-	background:rgb(220,220,220);
-
-	border-top:1px solid rgb(180,180,180);
-
-	border-bottom-left-radius:20px;
-	border-bottom-right-radius:20px;
-
-}
 
 #share_black{
 
@@ -618,17 +550,6 @@ body{
 
 }
 
-
-
-
-
-
-
-
-
-
-
-
 #share{
 
 	position:fixed;
@@ -639,7 +560,7 @@ body{
 	left:317px;
 
 	width:300px;
-	height:300px;
+	height:150px;
 
 	background:white;
 	color:black;
@@ -663,4 +584,16 @@ body{
 
 #share_share{
 	float:right;
+}
+
+.share_inp{
+	width:calc(100% - 14px);
+	padding:7px;
+	height:17px;
+
+	border-radius:5px;
+	border:1px solid gray;
+	background:#EEE;
+
+	color:black;
 }
